--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 plugins {
   //inlude the nodeJS plugin to execute nodejs and npm tasks
-  id "com.moowork.node" version "1.2.0"
+ plugins {
+  id "com.github.node-gradle.node" version "1.5.3"
+}
 }
 
 node {
 	download = true
-	version = "9.11.1"
-	npmVersion = "5.6.0"
+	
 }
 
 //declare a build task
