--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   //inlude the nodeJS plugin to execute nodejs and npm tasks
 
-  id "com.github.node-gradle.node" version "1.5.3"
+    id("com.github.node-gradle.node") version "3.5.1"
 }
 
 
