--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 plugins {
   //inlude the nodeJS plugin to execute nodejs and npm tasks
 
-      id("de.solugo.gradle.nodejs") version "0.6.2"
+    id "com.moowork.node" version "1.2.0"
 }
 
 
 node {
 	download = true
+	version = "9.11.1"
+	npmVersion = "5.6.0"
+}
 	
 }
 
