--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 plugins {
   //inlude the nodeJS plugin to execute nodejs and npm tasks
 
-   id "com.github.node-gradle.node" version "3.5.1"
-}
+  id "com.github.node-gradle.node" version "1.3.0"
 
 
 node {
 	download = true
+	version = '0.11.10'
+	 npmVersion = '2.1.5'
 	
 }
 	
